--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "browser": "./shim/vertical.js",
   "scripts": {
     "deploy": "rimraf gh-pages/closure-library/scripts/ci/CloseAdobeDialog.exe && gh-pages -t -d gh-pages -m \"Build for $(git log --pretty=format:%H -n1)\"",
-    "prepublish": "export NODE_OPTIONS='--openssl-legacy-provider' && python build.py && webpack",
+    "prepublish": "alias python='python2' && export NODE_OPTIONS='--openssl-legacy-provider' && python build.py && webpack",
     "compile": "npm run prepublish && ./copy.sh",
     "test:unit": "node tests/jsunit/test_runner.js",
     "test:lint": "eslint .",
